#leetcode
initial commit
760 Find Angram Mappings
771-Jewels and Stones
595-Big Countries