@@ -1,3 +1,4 @@
-<b>[Easy][JAVA]760 Find Angram Mappings</b>
-<b>[Easy][JAVA]771-Jewels and Stones</b>
-<b>[Easy][MySQL]595-Big Countries</b>
+[Easy][JAVA]760 Find Angram Mappings  
+[Easy][JAVA]771-Jewels and Stones  
+[Easy][MySQL]595-Big Countries  
+[Easy][JAVA]461-Hamming Distance
